--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 
 #under-line{
     height: 4px;
-    background-color: pink;
+    background-color: rgba(255, 192, 203, 0.886);
     position: absolute;
     width: 60px;
     left: 0px;
